--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
  
 
 </div>
-<a href="https://wa.me/5547988374266?text=Quero%20falar%20com%20irm%C3%A3o%20Marios">
+<a href="https://wa.me/5547988374266?text=">
     <img src="./img/whatsapp (1).png" alt="link para wtsapp" class="wtsapp">
   </a>
    
